@@ -158,4 +158,5 @@ dnl	    ;;
 dnl  esac
 dnl fi
 
-AC_OUTPUT([Makefile autotrace-config], [chmod a+x autotrace-config])
+AC_OUTPUT([Makefile autotrace-config autotrace.pc], 
+[chmod a+x autotrace-config])
